k8s/ingress/vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls: [{ hosts: [vault.cute.haus], secretName: vaultwarden-tls }]
  rules:
    - host: vault.cute.haus
      http:
        {
          paths:
            [
              {
                path: /,
                pathType: Prefix,
                backend:
                  { service: { name: vaultwarden, port: { number: 80 } } },
              },
            ],
        }
